ESP32-S3/build/log/idf_py_stdout_output_1232
[1/9] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D C:\Users\anima\esp-skainet\examples\en_speech_commands_recognition\build\bootloader\esp-idf\esptool_py && C:\Espressif\python_env\idf5.3_py3.11_env\Scripts\python.exe C:/Espressif/frameworks/esp-idf-v5.3.1/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 C:/Users/anima/esp-skainet/examples/en_speech_commands_recognition/build/bootloader/bootloader.bin"
Bootloader binary size 0x5810 bytes. 0x27f0 bytes (31%) free.
[2/7] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
ccache C:\Espressif\tools\xtensa-esp-elf\esp-13.2.0_20240530\xtensa-esp-elf\bin\xtensa-esp32s3-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.3.1-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Users/anima/esp-skainet/examples/en_speech_commands_recognition/build/config -IC:/Users/anima/esp-skainet/examples/en_speech_commands_recognition/main/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/newlib/platform_include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/freertos/config/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/freertos/config/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/freertos/config/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/freertos/FreeRTOS-Kernel/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/freertos/esp_additions/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_hw_support/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_hw_support/include/soc -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_hw_support/include/soc/esp32s3 -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_hw_support/dma/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_hw_support/ldo/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_hw_support/port/esp32s3/. -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_hw_support/port/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/heap/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/log/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/soc/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/soc/esp32s3 -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/soc/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/hal/platform_port/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/hal/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/hal/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_rom/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_rom/include/esp32s3 -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_rom/esp32s3 -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_common/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_system/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_system/port/soc -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_system/port/include/private -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/xtensa/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/xtensa/deprecated_include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/lwip/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/lwip/include/apps -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/lwip/include/apps/sntp -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/lwip/lwip/src/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/lwip/port/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/lwip/port/freertos/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/lwip/port/esp32xx/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/lwip/port/esp32xx/include/arch -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/lwip/port/esp32xx/include/sys -IC:/Users/anima/esp-skainet/components/esp-sr/src/include -IC:/Users/anima/esp-skainet/components/esp-sr/esp-tts/esp_tts_chinese/include -IC:/Users/anima/esp-skainet/components/esp-sr/include/esp32s3 -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/json/cJSON -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/spiffs/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_partition/include -IC:/Users/anima/esp-skainet/components/led_strip/include -IC:/Users/anima/esp-skainet/components/hardware_driver/include -IC:/Users/anima/esp-skainet/components/hardware_driver/codec/include -IC:/Users/anima/esp-skainet/components/hardware_driver/boards/include -IC:/Users/anima/esp-skainet/components/hardware_driver/led/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/driver/deprecated -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/driver/i2c/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/driver/touch_sensor/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/driver/twai/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/driver/touch_sensor/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_pm/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_ringbuf/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_driver_gpio/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_driver_pcnt/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_driver_gptimer/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_driver_spi/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_driver_mcpwm/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_driver_ana_cmpr/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_driver_i2s/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_driver_sdmmc/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/sdmmc/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_driver_sdspi/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_driver_sdio/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_driver_dac/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_driver_rmt/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_driver_tsens/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_driver_sdm/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_driver_i2c/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_driver_uart/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/vfs/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_driver_ledc/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_driver_parlio/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_driver_usb_serial_jtag/include -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/fatfs/diskio -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/fatfs/src -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/fatfs/vfs -IC:/Espressif/frameworks/esp-idf-v5.3.1/components/wear_levelling/include -IC:/Users/anima/esp-skainet/components/esp_codec_dev/include -IC:/Users/anima/esp-skainet/components/esp_codec_dev/interface -IC:/Users/anima/esp-skainet/components/esp_codec_dev/device/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -mdisable-hardware-atomics -Og -fno-shrink-wrap -fmacro-prefix-map=C:/Users/anima/esp-skainet/examples/en_speech_commands_recognition=. -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.3.1=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -w -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c C:/Users/anima/esp-skainet/examples/en_speech_commands_recognition/main/main.c
C:/Users/anima/esp-skainet/examples/en_speech_commands_recognition/main/main.c: In function 'uart_init':
C:/Users/anima/esp-skainet/examples/en_speech_commands_recognition/main/main.c:35:22: error: 'UART_DATA_BITS_8' undeclared (first use in this function); did you mean 'UART_DATA_BITS_MAX'?
   35 |         .data_bits = UART_DATA_BITS_8,
      |                      ^~~~~~~~~~~~~~~~
      |                      UART_DATA_BITS_MAX
C:/Users/anima/esp-skainet/examples/en_speech_commands_recognition/main/main.c:35:22: note: each undeclared identifier is reported only once for each function it appears in
ninja: build stopped: subcommand failed.
